--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
     </head>
 
     <body class="container">
-        <h1 class="title">Valnilla JavaScript Todo App</h1>
+        <header class="logo">
+            <img src="/images/education.png" alt="logo-book">
+            <h1>Vanilla JavaScript Todo App</h1>
+        </header>
+
+        <div class="main">
+            <form action="">
+                <input type="text" name="" id="" placeholder="New Task...">
+                <button type="submit"><i class="fas fa-plus-square"></i></button>
+            </form>
+
+            <div class="todoList">
+                <ul>
+
+                </ul>
+                <a class="clearAll" id="clearAll">Clear All</a>
+            </div>
+        </div>
+
 
         <script type="text/javascript" src="app.js"></script>
     </body>
