--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body class="container">
         <header class="logo">
             <img src="/images/education.png" alt="logo-book">
-            <h1>Vanilla JavaScript Todo App</h1>
+            <h1>Keeper</h1>
         </header>
 
         <div class="main">
