darkmode in progress

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <img src="/images/education.png" alt="logo-book">
             <h1>Keeper</h1>
         </header>
-
+        <div class="darkModeWrap">
+            <button type="submit" id="mode" name="mode"><i class="fa-solid fa-moon"></i></button>
+        </div>
         <div class="main">
             <form action="">
                 <input type="text" name="" id="" placeholder="New Task...">
