first heroku commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h1>Keeper</h1>
         </header>
         <div class="darkModeWrap">
-            <button type="submit" id="mode" name="mode"><i class="fa-solid fa-moon"></i></button>
+            <button title="Dark Mode" type="submit" id="mode" name="mode"><i class="fa-solid fa-moon"></i></button>
         </div>
         <div class="main">
             <form action="">
