fixed colors on buttons

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
     <body class="container">
         <header class="logo">
             <img src="/images/education.png" alt="logo-book">
-            <h1>Keeper</h1>
+            <h1>Vanilla JS Todo</h1>
         </header>
         <div class="darkModeWrap">
             <button title="Dark Mode" type="submit" id="mode" name="mode"><i class="fa-solid fa-moon"></i></button>
